enviroment/yaml/k8s/ingress/ingress-harbor.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor
spec:
  selector:
    app: harbor
  ports:
    - port: 8080
  type: NodePort
